# A2A

./: .gitignore  README.md  a2a_policy_agent.py  a2a_provider_agent.py  a2a_research_agent.py  helpers.py  mcpserver.py  mcptester.ipynb  orchestrator.ipynb  policy_agent.py  prompt_pwa_orchestrator.md  provider_agent.py  requirements.txt  setup_agentes.bat  test.ipynb
agente_busquedas_externas/: .env.example  .gitignore  README.md  pyproject.toml  send_task.py
agente_busquedas_externas/.claude/: settings.local.json
agente_busquedas_externas/src/: main.py
agente_busquedas_externas/src/agents/: deduplicator.py  jd_analyst.py  orchestrator.py  planner.py  reporter.py  scorer.py
agente_busquedas_externas/src/agents/sourcing/: github.py  himalayas.py  tavily.py
agente_busquedas_externas/src/domain/: models.py
agente_busquedas_externas/src/persistence/: db.py  repositories.py  schema_postgres.sql  schema_sqlite.sql  sqlite_repos.py
agente_busquedas_externas/tests/unit/: test_models.py  test_orchestrator.py  test_pipeline_agents.py  test_source_agents.py  test_sqlite_repos.py
agente_busquedas_internas/: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
agente_busquedas_internas/.claude/: settings.local.json
agente_busquedas_internas/agentes/: __init__.py
agente_busquedas_internas/agentes/busquedas_internas/: __init__.py  agent-prompt.txt  agent.json  agent.py  cvs.py  workday_api_service.py
agente_busquedas_internas/agentes/config/: settings.py
agente_busquedas_internas/datos_prueba/cvs/: .embeddings_cache.json  Adhemar Caceres.pptx  Agustin Laborde.pptx  Alan Lampert.pptx  Alan Parenti.pptx  Ana Penacchioni.pptx  Bettina Sommer.pptx  Daria Obukhova.pptx  Diliana Crespo.pptx  Federico Gimenez Scarponi.pptx  Federico Tobares.pptx  Gerardo Medina.pptx  Gonzalo Lucena.pptx  Irene Altomonte.pptx  Jonathan Arteaga.pptx  Jose Luis Beltramone.pptx  Josmary Salazar.pptx  Juan Ignacio Tiseira.pptx  Juan Manuel Carranza.pptx  Julian Monte.pptx  Karenina Kauffmann.pptx  Leandro Bravo.pptx  Lucas Peredo.pptx  María Paz Gelpi.pptx  Mateo Simonassi.pptx  Melanie Zubimendi.pptx  Nicolas Bulfon.pptx  Pablo Negro.pptx  Santiago Sebastian Buchara.pptx
agente_busquedas_internas/schemas/: Candidato.py  CandidatoRankeado.py  JobDescriptionEstructurada.py  ResultadoRanking.py  __init__.py  busqueda_response.py  cvs_data.py
agente_busquedas_internas/tests/: test_agente_busquedas_internas.py
agente_job_description/: pyproject.toml  server.py
agente_job_description/.claude/: settings.local.json
agente_job_description/agentes/: __init__.py
agente_job_description/agentes/config/: settings.py
agente_job_description/agentes/job_description/: __init__.py  agent-prompt.txt  agent.json  agent.py
agente_job_description/agentes/redactar_jd/: __init__.py  agent-prompt.txt  agent.py
agente_job_description/schemas/: JobDescriptionEstructurada.py  JobDescriptionRedactada.py  __init__.py
agente_job_description/tests/: conftest.py  test_agente_job_description.py
frontend/: .env.example  (+4 more)
(+94 files in other folders)
