[project]
name = "agente-job-description"
version = "1.0.0"
description = "Agente ADK que parsea Job Descriptions en texto libre y las estructura en JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "a2a-sdk>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentes", "schemas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
